[package]
edition = "2018"
name = "resynth"
version = "0.3.0"
description = "A packet synthesis language"
authors = ["Gianni Tedesco <gianni@scaramanga.co.uk>"]
license = "MIT"
homepage = "https://github.com/giannitedesco/resynth"
repository = "https://github.com/giannitedesco/resynth"
readme = "README.md"
keywords = [
 "packets",
 "packet-synthesis",
 "traffic-generation",
 "networking",
 "pcap",
]
categories = [
 "command-line-utilities",
 "compilers",
 "network-programming",
]
include = [
 "src/**/*.rs",
 "Cargo.toml",
 "README.md",
 "LICENSE.txt",
 "examples/*.rsyn",
 "doc/grammar.bnf",
 "doc/parser.dot",
]

[profile.release]
lto = true
panic = "abort"
incremental = true
codegen-units = 8

[profile.bench]
lto = true

[workspace]

[dependencies]
pkt = { path = "pkt", version = "0.3.0" }
ezpkt = { path = "ezpkt", version = "0.3.0" }

lazy-regex = "2.5"
regex = "1.9.5"
phf = { version = "0.11", features = ["macros"] }

# For cli
atty = { version = "0.2.14", optional = true}
termcolor = {version = "1.2", optional = true}
clap = {version = "4.1", optional = true, features = ["cargo"]}

[[bin]]
name = "resynth"
path = "src/cli.rs"
required-features = ["cli"]

[features]
default = [
  "cli",
]
cli = ["clap", "atty", "termcolor"]
