[package]
edition = "2018"
name = "pkt"
version = "0.4.0-dev"
description = "A packet construction library"
authors = ["Gianni Tedesco <gianni@scaramanga.co.uk>"]
license = "MIT"
homepage = "https://github.com/rapid7/resynth"
repository = "https://github.com/rapid7/resynth"
readme = "README.md"
keywords = [
 "packets",
 "traffic-generation",
 "networking",
 "pcap",
]
categories = [
 "network-programming",
]
include = [
 "src/**/*.rs",
 "Cargo.toml",
 "README.md",
 "LICENSE.txt",
]
